Colored hr and customized scrollbar.  Fixed issue loading certain pourers.  Added dummy images for pourers without.  Added services section and link.

--- a/css/custom.css
+++ b/css/custom.css
@@ -2,6 +2,7 @@ body {
     margin: 0;
     overflow-x: hidden; 
     font-size: 1rem;
+
 }
 
 .background {
@@ -56,6 +57,15 @@ body {
     margin-top: 40px;
 }
 
+hr {
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 1px solid rgba(90, 37, 97, 1);
+    margin: 1em 0;
+    padding: 0; 
+   background-color: rgba(90, 37, 97, 1)
+}
 
 .flex-container {
     display: flex;
@@ -90,6 +100,32 @@ body {
 
 .mco-heading {
     margin-top: 80px;
+}
+
+.mco-info {
+    margin-top: 2px;
+}
+
+.mco-scroll::-webkit-scrollbar-track {
+	-webkit-box-shadow: inset 0 0 6px rgba(90, 37, 97, .60);
+	background-color: rgba(90, 37, 97, 0.356);
+}
+
+.mco-scroll::-webkit-scrollbar {
+	width: 6px;
+	background-color: rgba(90, 37, 97, .60);
+}
+
+.mco-scroll::-webkit-scrollbar-thumb {
+	background-color: rgb(54, 22, 58);
+}
+
+.navbar-dark .navbar-nav .nav-link {
+    color: rgba(255,255,255,.6);
+}
+
+.navbar-dark .navbar-nav .nav-link:hover {
+    color: rgba(255,255,255,.9);
 }
 
 nav.navbar {
